<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="100dp"
android:layout_height="120dp"
android:layout_gravity="center"
android:layout_margin="5dp"
app:cardCornerRadius="3dp"
android:orientation="vertical">

<LinearLayout
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:contentDescription="@string/category_image_placeholder"
        android:scaleType="fitCenter"
        android:id="@+id/ivCategory"
        android:layout_width="match_parent"
        android:layout_height="80dp"/>
    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_name_placeholder"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:maxLines="2"/>

    <TextView
        android:id="@+id/tvCategoryId"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category_id_placeholder"
        android:textAlignment="viewStart" />



</LinearLayout>

</LinearLayout>