<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="120dp"
android:layout_gravity="center"
android:layout_marginVertical="2.5dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:contentDescription="@string/product_image_placeholder"
        android:scaleType="fitCenter"
        android:id="@+id/ivProduct"
        android:layout_width="100dp"
        android:layout_height="100dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_name_placeholder"
            android:textAlignment="viewStart"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:textSize="16sp"
            android:scrollHorizontally="true"
            android:ellipsize="end"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tvProductBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_brand_placeholder"
            android:textAlignment="viewStart"
            android:layout_marginStart="5dp"/>

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_price_placeholder"
            android:textAlignment="viewStart"
            android:layout_marginStart="5dp"
            android:textSize="16sp"
            android:textColor="#ba2525"
            android:textStyle="bold"
            android:layout_marginTop="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <TextView
                android:background="@drawable/border_style"
                android:textColor="@color/black"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="-"
                android:id="@+id/tvSubQuantity"/>

            <TextView
                android:layout_width="35dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/border_style"
                android:text="0"
                android:textSize="14sp"
                android:padding="2dp"
                android:id="@+id/tvQuantity" />

            <TextView
                android:background="@drawable/border_style"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="+"
                android:id="@+id/tvAddQuantity"/>

            <TextView
                android:id="@+id/tvProductId"
                android:visibility="invisible"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/product_id_placeholder"
                android:textAlignment="viewStart" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>

</LinearLayout>