<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="#F6F6F6">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetStartWithNavigation="50dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:titleMarginStart="45dp"
                app:titleTextColor="#ffff" />

            <!-- Right most ImageView -->
            <ImageView
                android:id="@+id/ivCartIcon"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />

            <!-- ImageView beside title of ToolBar -->
            <ImageView
                android:id="@+id/ivBackArrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingLeft="10dp"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                app:tint="#ffff" />
            <!-- ImageView beside title of ToolBar -->
            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:background="@color/white"
                android:layout_width="300dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/ivCartIcon"
                app:layout_constraintStart_toEndOf="@+id/ivBackArrow"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingHorizontal="-14dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:iconifiedByDefault="false"
                app:queryHint="Search for a Product"
                app:queryBackground="@android:color/transparent"
                android:layout_centerHorizontal="true"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:background="#F6F6F6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivProduct"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/white"
                android:scaleType="fitCenter"
                android:src="@drawable/iphone_14_pro_max"/>
            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:paddingStart="10dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:text="@string/product_name_placeholder"/>

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="#ba2525"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/product_price_placeholder"
                android:layout_marginBottom="5dp"/>


            <TextView
                android:id="@+id/tvProductModelYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:text="@string/product_model_year_placeholder"
                android:drawableStart="@drawable/ic_baseline_monitor_24"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/tvProductBrand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingVertical="5dp"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:text="@string/product_brand_placeholder"
                android:drawableStart="@drawable/ic_baseline_branding_watermark_24"
                android:drawablePadding="10dp"/>
            <TextView
                android:id="@+id/tvProductCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:text="@string/product_category_placeholder"
                android:drawableStart="@drawable/ic_baseline_category_24"
                android:drawablePadding="10dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tvProductDescriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:paddingStart="10dp"
                android:textSize="16dp"
                android:text="@string/product_description"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvProductDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="@color/black"
                android:paddingTop="5dp"
                android:paddingBottom="10dp"
                android:paddingHorizontal="10dp"
                android:textSize="16dp"
                android:text="@string/product_description_placeholder"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:id="@+id/tvProductId"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/product_id_placeholder"
                android:visibility="invisible"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/tvAddToCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:paddingVertical="10dp"
        android:textSize="18sp"
        android:gravity="center"
        android:text="Add to Cart"
        android:textStyle="bold"
        android:drawablePadding="10dp"
        android:layout_gravity="bottom"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>