<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- ToolBar widget -->
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lapis"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:contentInsetStartWithNavigation="50dp"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:titleMarginStart="45dp"
                app:titleTextColor="#ffff" />

            <!-- Right most ImageView -->
            <ImageView
                android:id="@+id/ivCartIcon"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"
                app:srcCompat="@drawable/ic_baseline_shopping_cart_24"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"/>

            <!-- ImageView beside title of ToolBar -->
            <ImageView
                android:id="@+id/ivMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingLeft="10dp"
                app:srcCompat="@drawable/ic_baseline_menu_24"
                app:tint="#ffff"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:background="@color/white"
                android:layout_width="300dp"
                android:layout_height="35dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivMenu"
                app:layout_constraintEnd_toStartOf="@+id/ivCartIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:paddingHorizontal="-14dp"
                android:layout_marginEnd="10dp"
                app:iconifiedByDefault="false"
                app:queryHint="Search for a Product"
                app:queryBackground="@android:color/transparent"
                android:layout_centerHorizontal="true" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:background="#F6F6F6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivHomeBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/home_promo_banner_1"
                android:scaleType="fitXY"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:paddingStart="10dp"
                    android:paddingVertical="10dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategoryList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:layout_marginBottom="5dp"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lapis"
                android:orientation="horizontal"
                android:layout_marginBottom="2.5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newest_products"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="16dp"
                    android:paddingVertical="16dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvViewAll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right|center_vertical"
                    android:text="@string/view_all"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:paddingEnd="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProductList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

            <ProgressBar
                android:id="@+id/pbLoading"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:visibility="invisible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>